# rules_aptprep

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
aptprep/: BUILD.bazel  aptprep_toolchain.BUILD.tpl  defs.bzl  extensions.bzl  generate_lockfile.sh.tpl  repositories.bzl  rules.bzl  toolchain.bzl
aptprep/private/: BUILD.bazel  debian_package.BUILD.tpl  package.BUILD.tpl  packages_repo.bzl  resolved_toolchain.bzl  sysroot.BUILD.tpl  sysroot_repo.bzl  toolchain_toolchains.BUILD.tpl  toolchains_repo.bzl  versions.bzl
aptprep/tests/: versions_test.bzl
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  aptprep.yaml  test_sysroot.sh
