bazel_dep(name = "rules_aptprep", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "rules_aptprep",
    path = "../..",
)

aptprep = use_extension("@rules_aptprep//aptprep:extensions.bzl", "aptprep")
aptprep.toolchain(
    archive_url = "https://github.com/nickguletskii/aptprep/releases/download/v0.1.2/aptprep_linux_x86_64.tar",
    sha256 = "4d1b992540fb9856561f101d8ef4a54b7e74529a65171468f7940933ad0a0e52",
)
aptprep.packages(
    config = "//:aptprep.yaml",
    lockfile = "//:lockfile.json",
    repo_name = "aptprep_smoke_packages",
)
aptprep.sysroot(
    config = "//:aptprep.yaml",
    lockfile = "//:lockfile.json",
    packages_list = [
        "bash",
        "curl",
    ],
    repo_name = "aptprep_smoke_sysroot",
)
use_repo(aptprep, "aptprep_binary_archive", "aptprep_smoke_packages", "aptprep_smoke_sysroot", "aptprep_toolchains")

register_toolchains("@aptprep_toolchains//:all")
